Keyboard control was restored.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
         <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
         <title>SVG Pong Game</title>
         <link rel="stylesheet" href="pong.css" />
+        <script type="text/javascript" src="pong.js"></script>
     </head>
     <body>
-<!--    <embed src="pong.svg" type="image/svg+xml" />-->
         <svg id="svgpong" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                  onload="init();" height="800" width="500">
-            <script type="text/javascript" xlink:href="pong.js" />
 
             <defs>
                 <radialGradient id="rGradient1" cx="50%" cy="50%" r="50%" fx="10%" fy="10%">
